[project]
authors = [{name = "William Alexander Pacheco Valderrama", email = "wpachecov@unal.edu.co"}]
dependencies = []
name = "computational_astrophysics"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
computational_astrophysics = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.4.2,<3"
matplotlib = ">=3.10.8,<4"
